syntax = "proto3";
package targabay.protos.service;
option go_package = "targabay/protos/service_pb";

import "types/common.proto";
import "types/notifications.proto";

service NotificationsService {
    rpc GetUserNotifications(GetUserNotificationsRequest) returns (GetNotificationResponse);
    rpc MarkAllNotificationsShown(EmptyRequest) returns (EmptyResponse);
}